--- a/pages/index.css
+++ b/pages/index.css
@@ -9,6 +9,7 @@
 @import url(../blocks/brand/brand.css);
 @import url(../blocks/how-works/how-works.css);
 @import url(../blocks/our/our.css);
+@import url(../blocks/clients/clients.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/tariffs/tariffs.css);
 @import url(../blocks/individual/individual.css);
